--- a/Resume_Webpage/css/style.css
+++ b/Resume_Webpage/css/style.css
@@ -13,11 +13,13 @@ body{
     padding-top: 70px;
     padding-bottom: 50px;
     align-content: center;
-/*    background-color: #ffffff;*/
-    background-image: image(image/_MG_8913-Edit(1)_small.jpg)
+    background-color: #ffffff;
+/*    background-image: image(image/_MG_8913-Edit(1)_small.jpg);*/
+/*    background-image: image(http://pixel.nymag.com/imgs/fashion/daily/2016/10/04/04-squirrel-nut.w710.h473.2x.jpg);*/
     width: 100%;
     height: 150px;
     box-shadow: 0px 5px 50px rgba(0,0,0,0.5);
+    position: fixed;
 }
 
 .banner_left{
@@ -35,7 +37,7 @@ body{
 
 #what{
     width: 400px;
-    font-family: 'Raleway', serif;
+    font-family: 'Raleway', sans-serif;
     font-weight: 400;
     font-style: italic;
     font-size: 20px;
@@ -48,6 +50,126 @@ body{
     border-radius: 50%;
     width: 160px;
     height: 160px;
-    background: yellow;
+    background-color: aquamarine;
     margin-right: 15%;
+}
+
+.main{
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-top: 5%;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: #111;
+}
+
+.main .section{
+    margin-top: 8%;
+    margin-bottom: 8%;
+}
+
+.main .subsection{
+    margin-top:3%;
+    margin-bottom: 3%;
+}
+
+.main .head1{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800;
+    font-size: 28px;
+}
+
+.acad.subsection{
+    margin-top: 3%;
+    margin-bottom: 6%;
+}
+
+.main .head2{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+}
+
+.acad.subsection .text{
+    float: left;
+    padding-top: 8px;
+    font-size: 16px;
+    font-style: italic;
+}
+
+.main .acad.section{
+    margin-top: 40%;
+    margin-bottom: 12%;
+}
+
+.acad.subsection .more{
+    font-family: sans-serif;
+    float: right;
+    font-weight: 700;
+}
+
+.subsection .text{
+    padding-top: 8px;
+    line-height: 25px;
+    text-align: justify;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.extra .subsection .text{
+    margin-top: -12px;
+    line-height: 30px;
+    text-align: justify;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.acad b{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+/*    font-style: italic;*/
+    padding-right: 10px;
+    color: #aaa;
+}
+
+.extra b{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+}
+
+.hobbies ul{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.hobbies .left{
+    float: left;
+    margin-top: 0;
+    margin-bottom: 0px;
+}
+
+.hobbies .right{
+    float: left;
+    margin-top: 0;
+    margin-bottom: 0px;
+    margin-left: 100px;
+}
+
+.hobbies .text.list{
+    margin-bottom: 150px;
+}
+
+.contact .text{
+    line-height: 30px;
+}
+
+.contact i{
+    font-weight: 700;
+    color: #999;
+}
+
+.contact a{
+    color: inherit;
+    text-decoration: none;
 }
