--- a/Craigslist_Redesign/css/style.css
+++ b/Craigslist_Redesign/css/style.css
@@ -14,7 +14,7 @@ body{
     height: 80px;
     width: 100%;
     box-shadow: 0px 2px 20px rgba(0,0,0,0.2);
-    display: block;
+/*    display: block;*/
 /*    overflow: hidden;*/
     padding-top: 10px;
     padding-bottom: 10px;
@@ -23,6 +23,7 @@ body{
     box-sizing: border-box;
     display: grid;
     grid-template-columns: 12em 6em auto 50px 50px 80px;
+    z-index: 3;
 }
 
 .craigslist{
@@ -46,7 +47,7 @@ body{
     transform: translateY(2px);
 }
 .sticky-header .location .collapse-icon:hover{
-    opacity: 0.6;
+/*    opacity: 0.6;*/
 }
 
 .sticky-header .location .highlight{
@@ -101,5 +102,113 @@ body{
 
 .sticky-header .search input:focus{
     outline: none;
-    border-bottom: 2px solid #444;
+    border-bottom: 1.5px solid #444;
+    background: none;
+}
+
+.lvl1-nav{
+    position: fixed;
+    width: 20%;
+    height: 100%;
+    background-color: #1a1a1a;
+    box-shadow: 2px 0px 20px rgba(0,0,0,0.4);
+    margin-top: 80px;
+    padding-top: 2%;
+    padding-bottom: 3%;
+/*    padding-left: 5%;*/
+/*    padding-right: 5%;*/
+    z-index: 2;
+    overflow-y: auto;
+}
+
+.lvl1-nav ul{
+    list-style: none;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: aliceblue;
+    text-align: right;
+    padding-left: 0;
+}
+
+.lvl1-nav li{
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.lvl1-nav li:hover{
+    background-color: rgba(255,255,255,0.03);
+}
+
+.lvl1-nav::-webkit-scrollbar {
+    margin-top: 100px;
+    width: 8px;
+    background-color: rgba(0,0,0,0);
+}
+
+.lvl1-nav::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+/*    border-radius: 10px;*/
+}
+
+.lvl1-nav::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: rgba(255,255,255,0.15);
+/*    -webkit-box-shadow: inset 0 0 6px rgba(255,255,255,1); */
+}
+
+.lvl2-nav{
+    position: fixed;
+    width: 18%;
+    height: 100%;
+    background-color: #202020;
+    box-shadow: 2px 0px 20px rgba(0,0,0,0.4);
+    margin-top: 80px;
+    margin-left: 20%;
+    padding-top: 2%;
+    padding-bottom: 3%;
+/*    padding-left: 5%;*/
+/*    padding-right: 5%;*/
+    z-index: 1;
+    overflow-y: auto;
+}
+
+.lvl2-nav ul{
+    list-style: none;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    color: aliceblue;
+    text-align: right;
+    padding-left: 0;
+}
+
+.lvl2-nav li{
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.lvl2-nav li:hover{
+    background-color: rgba(255,255,255,0.03);
+}
+
+.lvl2-nav::-webkit-scrollbar {
+    margin-top: 100px;
+    width: 8px;
+    background-color: rgba(0,0,0,0);
+}
+
+.lvl2-nav::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+/*    border-radius: 10px;*/
+}
+
+.lvl2-nav::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: rgba(255,255,255,0.15);
+/*    -webkit-box-shadow: inset 0 0 6px rgba(255,255,255,1); */
 }
